; ModuleID = '/home/carl/AnghaBench/disque/src/extr_aof.c_startLoading.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_aof.c_startLoading.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }
%struct.stat = type { i32 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @startLoading(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.stat, align 4
  store i32* %0, i32** %2, align 8
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 4
  %4 = call i32 @time(i32* null)
  store i32 %4, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 2), align 4
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @fileno(i32* %5)
  %7 = call i32 @fstat(i32 %6, %struct.stat* %3)
  %8 = icmp eq i32 %7, -1
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 4
  br label %13

10:                                               ; preds = %1
  %11 = getelementptr inbounds %struct.stat, %struct.stat* %3, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 4
  br label %13

13:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @time(i32*) #1

declare dso_local i32 @fstat(i32, %struct.stat*) #1

declare dso_local i32 @fileno(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
